<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#527C9E"
    tools:context=".SittingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_horizontal"
                android:orientation="horizontal"

                >

                <TextView

                    android:id="@+id/celcous"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"

                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/celecous"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/fehrenheit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/fehrenheit"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/klevin"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"


                    android:gravity="center"
                    android:text="@string/kelvin"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/langauge"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_horizontal"
                android:orientation="horizontal"

                >

                <TextView

                    android:id="@+id/english"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"

                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/english"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/arabic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/arabic"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_horizontal"
                android:orientation="horizontal"

                >

                <TextView

                    android:id="@+id/gps"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"

                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/gps"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/map"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/map"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_horizontal"
                android:orientation="horizontal"

                >

                <TextView

                    android:id="@+id/mps"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"

                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/mps"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/mph"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/mph"
                    android:textSize="16sp"
                    android:textStyle="bold" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>